# play-fastapi

./: .env  Dockerfile  Makefile
app/: pyproject.toml
