[tool.poetry]
name = "play-fastapi"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
numpy = "^1.19.2"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
ipykernel = "^5.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
